添加两个接口，修改一个接口
